--- a/Image_affective_recognition_Demo/config/image2emotion_local.yml
+++ b/Image_affective_recognition_Demo/config/image2emotion_local.yml
@@ -1,6 +1,5 @@
 
-artemis_preprocessed_dir : 'F:/work/Image_emotion_analysis/artemis-master/artemis_out/step1/artemis_preprocessed.csv'
-image_hists_file :  'F:/work/Image_emotion_analysis/artemis-master/artemis/data/image-emotion-histogram.csv'
+df_data_dir : 'F:/work/Image_emotion_analysis/artemis-master/Image_affective_recognition_Demo/resource/output/emotion_per_image.npz'
 img_dir :  'F:/dataset/Image/ArtEmis/wikiart'
 
 lanczos :  True
@@ -9,6 +8,6 @@ n_emotions: 9
 num_workers :  8
 batch_size :  128
 gpu_id :  0
-use_abstract: False
-checkpoint_file: 'F:/work/Image_emotion_analysis/artemis-master/Image_affective_recognition_Demo/resource/output/image_emotion_no/best_model.pt'
-save_dir :  'F:/work/Image_emotion_analysis/artemis-master/Image_affective_recognition_Demo/resource/output/image_emotion_no' 
+use_abstract: True
+checkpoint_file: 'F:/work/Image_emotion_analysis/artemis-master/Image_affective_recognition_Demo/resource/output/test/best_model.pt'
+save_dir :  'F:/work/Image_emotion_analysis/artemis-master/Image_affective_recognition_Demo/resource/output/test' 
